syntax = "proto3";

package proto.echo;

option go_package = "examples/sgrpc/proto";

service EchoService{
    rpc Echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest{
    string msg = 1;
}

message EchoResponse{
  string msg = 1;
}